--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightseagreen;
+    background-color: ghostwhite;
 }
 
 p {
